2010-10-03  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectManipulator_create_new.cpp (ObjectManipulator::createNewObject):
	fixed #1776 once new firewall is created, automatically open its Policy

	* FWWindow.cpp (FWWindow::showIntroDialog): fixed #1765, #1779
	Move quick start guide to the web site. The "Quick Start Guide" is
	now part of the web site and the GUI only shows a
	dialog-invitation to watch it.

2010-10-01  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWBSettings.cpp (getABTestingGroup): fixed #1763 Implemented
	basic facility for A/B testing within the GUI

2010-09-30  Vadim Kurland  <vadim@vk.crocodile.org>

	* FindObjectWidget.cpp (keyPressEvent): fixed #1755 "hitting enter
	after editing search attribute in the Find panel should trigger
	search"

	* FindObjectWidget.cpp (matchAttr): fixed #1760 'Search by
	attribute "name" should search by name or label'.

	* FindObjectWidget.cpp (objectInserted): fixed #1757 Allow
	searching by attributes even after an object is dropped into the
	drop area in search panel.

	* newFirewallDialog.cpp (browseTemplate): fixed #1759 "Use default
	template library" button seems to do nothing. This button should
	only be enabled if user switched to their own library of template
	objects. The button should be disabled if they switched back to
	the standard template library or never switched to their own one.

	* newHostDialog.cpp (finishClicked): fixed #1761 "blank interface
	name is possible in new host wizard"

	* FWObjectPropertiesFactory.cpp (getInterfaceNameExamplesForHostOS):
	fixed #1753 "Set interface name hint based on firewall platform
	and host OS". The placeholder text in the interface name and label
	input fields in the new firewall wizard will depend on the host OS
	chosen in the first page of the wizard.

	* utils.cpp (validateName): fixed #1751 "Don't allow interface
	names to be blank". The GUI should not allow the name of any
	object to be blank.

2010-09-29  Vadim Kurland  <vadim@vk.crocodile.org>
