@@ -560,8 +560,8 @@ void FWWindow::showIntroDialog()
                         "</tr>"
                         "</table>"
                         "<p>"
-                        "This short guide provides basic information "
-                        "new users need to save time when first learning "
+                        "There is a short online guide that provides basic information "
+                        "to help new users save time when first learning "
                         "to use Firewall Builder."
                         "</p>"
                         "<p>"
