@@ -343,6 +343,14 @@
     </p>
   </li>
 
+  <li>
+    <p>
+      fixed #1767 improved UI in the new firewall and new host dialogs
+      where user chooses file for the custom template library or uses
+      standard template library.
+    </p>
+  </li>
+
 </ul>
 
 
