@@ -1,3 +1,9 @@
+2010-10-04  Vadim Kurland  <vadim@vk.crocodile.org>
+
+	* newFirewallDialog.cpp (showPage): fixed #1767 improved UI in the
+	new firewall and new host dialogs where user chooses file for the
+	custom template library or uses standard template library.
+
 2010-10-03  Vadim Kurland  <vadim@vk.crocodile.org>
 
 	* ObjectManipulator_create_new.cpp (ObjectManipulator::createNewObject):
